--- a/public/test.html
+++ b/public/test.html
@@ -66,7 +66,7 @@
 			// 다각형을 생성합니다 
 			var polygon = new kakao.maps.Polygon({
 				map: map, // 다각형을 표시할 지도 객체
-				path: area.path,
+				path: path,
 				strokeWeight: 2,
 				strokeColor: '#004c80',
 				strokeOpacity: 0.8,
@@ -80,7 +80,7 @@
 			kakao.maps.event.addListener(polygon, 'mouseover', function (mouseEvent) {
 				polygon.setOptions({ fillColor: '#09f' });
 
-				customOverlay.setContent('<div class="area">' + area.name + '</div>');
+				customOverlay.setContent('<div class="area">' + name + '</div>');
 
 				customOverlay.setPosition(mouseEvent.latLng);
 				customOverlay.setMap(map);
@@ -100,16 +100,16 @@
 			});
 
 			// 다각형에 click 이벤트를 등록하고 이벤트가 발생하면 다각형의 이름과 면적을 인포윈도우에 표시합니다 
-			kakao.maps.event.addListener(polygon, 'click', function (mouseEvent) {
-				var content = '<div class="info">' +
-					'   <div class="title">' + area.name + '</div>' +
-					'   <div class="size">총 면적 : 약 ' + Math.floor(polygon.getArea()) + ' m<sup>2</sup></area>' +
-					'</div>';
+			// kakao.maps.event.addListener(polygon, 'click', function (mouseEvent) {
+			// 	var content = '<div class="info">' +
+			// 		'   <div class="title">' + name + '</div>' +
+			// 		'   <div class="size">총 면적 : 약 ' + Math.floor(polygon.getArea()) + ' m<sup>2</sup></area>' +
+			// 		'</div>';
 
-				infowindow.setContent(content);
-				infowindow.setPosition(mouseEvent.latLng);
-				infowindow.setMap(map);
-			});
+			// 	infowindow.setContent(content);
+			// 	infowindow.setPosition(mouseEvent.latLng);
+			// 	infowindow.setMap(map);
+			// });
 			
 		}
 		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
