--- a/public/test.html
+++ b/public/test.html
@@ -4,118 +4,78 @@
 <head>
 	<meta charset="utf-8">
 	<title>다각형에 이벤트 등록하기2</title>
-	<style>
-		.area {
-			position: absolute;
-			background: #fff;
-			border: 1px solid #888;
-			border-radius: 3px;
-			font-size: 12px;
-			top: -5px;
-			left: 15px;
-			padding: 2px;
-		}
-
-		.info {
-			font-size: 12px;
-			padding: 5px;
-		}
-
-		.info .title {
-			font-weight: bold;
-		}
-	</style>
 </head>
 
 <body>
-	<div id="map" style="width:100%;height:350px;"></div>
+	<script src="https://code.highcharts.com/maps/highmaps.js"></script>
+	<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+	<script src="https://code.highcharts.com/mapdata/countries/kr/kr-all.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript"
-		src="//dapi.kakao.com/v2/maps/sdk.js?appkey=d21bba611d5b2617ceca0bb656175c49"></script>
+
+	<div id="container"></div>
 	<script>
-		var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
-			mapOption = {
-				center: new kakao.maps.LatLng(37.566826, 126.9786567), // 지도의 중심좌표
-				level: 14 // 지도의 확대 레벨
-			};
-		$.getJSON("data/korea.json", function (geojson) {
-			var data = geojson.features;
-			var coordinates = [];
-			var name = '';
-			$.each(data, function(index, val){
-				coordinates = val.geometry.coordinates;
-				name = val.properties.CTP_KOR_NM;
-				displayArea(coordinates)
-			})
-		})
-		var polygons = [];
+		var data = [
+			['kr-4194', 0],
+			['kr-kg', 1],
+			['kr-cb', 2],
+			['kr-kn', 3],
+			['kr-2685', 4],
+			['kr-pu', 5],
+			['kr-2688', 6],
+			['kr-sj', 7],
+			['kr-tj', 8],
+			['kr-ul', 9],
+			['kr-in', 10],
+			['kr-kw', 99],
+			['kr-gn', 12],
+			['kr-cj', 13],
+			['kr-gb', 14],
+			['kr-so', 15],
+			['kr-tg', 16],
+			['kr-kj', 17]
+		];
 
-		var map = new kakao.maps.Map(mapContainer, mapOption),
-			customOverlay = new kakao.maps.CustomOverlay({}),
-			infowindow = new kakao.maps.InfoWindow({ removable: true });
+		// Create the chart
+		Highcharts.mapChart('container', {
+			chart: {
+				map: 'countries/kr/kr-all'
+			},
 
-		// 다각형을 생상하고 이벤트를 등록하는 함수입니다
-		function displayArea(coordinates) {
+			title: {
+				text: 'Highmaps basic demo'
+			},
 
-			var path = [];
-			var points = [];
-			$.each(coordinates[0],function(index, coordinates){
-				var point = new Object();
-				point.x = coordinates[1];
-				point.y = coordinates[0];
-				points.push(point);
-				path.push(new kakao.maps.LatLng(coordinates[1],coordinates[0]));
-			})
+			subtitle: {
+				text: 'Source map: <a href="http://code.highcharts.com/mapdata/countries/kr/kr-all.js">South Korea</a>'
+			},
 
-			// 다각형을 생성합니다 
-			var polygon = new kakao.maps.Polygon({
-				map: map, // 다각형을 표시할 지도 객체
-				path: path,
-				strokeWeight: 2,
-				strokeColor: '#004c80',
-				strokeOpacity: 0.8,
-				fillColor: '#fff',
-				fillOpacity: 0.7
-			});
+			mapNavigation: {
+				enabled: true,
+				buttonOptions: {
+					verticalAlign: 'bottom'
+				}
+			},
 
-			polygons.push(polygon);
-			// 다각형에 mouseover 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 변경합니다 
-			// 지역명을 표시하는 커스텀오버레이를 지도위에 표시합니다
-			kakao.maps.event.addListener(polygon, 'mouseover', function (mouseEvent) {
-				polygon.setOptions({ fillColor: '#09f' });
+			colorAxis: {
+				min: 0
+			},
 
-				customOverlay.setContent('<div class="area">' + name + '</div>');
+			series: [{
+				data: data,
+				name: 'Random data',
+				states: {
+					hover: {
+						color: '#BADA55'
+					}
+				},
+				dataLabels: {
+					enabled: true,
+					format: '{point.name}'
+				}
+			}]
+		});
 
-				customOverlay.setPosition(mouseEvent.latLng);
-				customOverlay.setMap(map);
-			});
 
-			// 다각형에 mousemove 이벤트를 등록하고 이벤트가 발생하면 커스텀 오버레이의 위치를 변경합니다 
-			kakao.maps.event.addListener(polygon, 'mousemove', function (mouseEvent) {
-
-				customOverlay.setPosition(mouseEvent.latLng);
-			});
-
-			// 다각형에 mouseout 이벤트를 등록하고 이벤트가 발생하면 폴리곤의 채움색을 원래색으로 변경합니다
-			// 커스텀 오버레이를 지도에서 제거합니다 
-			kakao.maps.event.addListener(polygon, 'mouseout', function () {
-				polygon.setOptions({ fillColor: '#fff' });
-				customOverlay.setMap(null);
-			});
-
-			// 다각형에 click 이벤트를 등록하고 이벤트가 발생하면 다각형의 이름과 면적을 인포윈도우에 표시합니다 
-			// kakao.maps.event.addListener(polygon, 'click', function (mouseEvent) {
-			// 	var content = '<div class="info">' +
-			// 		'   <div class="title">' + name + '</div>' +
-			// 		'   <div class="size">총 면적 : 약 ' + Math.floor(polygon.getArea()) + ' m<sup>2</sup></area>' +
-			// 		'</div>';
-
-			// 	infowindow.setContent(content);
-			// 	infowindow.setPosition(mouseEvent.latLng);
-			// 	infowindow.setMap(map);
-			// });
-			
-		}
 	</script>
 </body>
 
