--- a/public/test.html
+++ b/public/test.html
@@ -9,7 +9,8 @@
 <body>
 	<script src="https://code.highcharts.com/maps/highmaps.js"></script>
 	<script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
-	<script src="https://code.highcharts.com/mapdata/countries/kr/kr-all.js"></script>
+	<!-- <script src="https://code.highcharts.com/mapdata/countries/kr/kr-all.js"></script> -->
+	<script src="data/korea_map.js"></script>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
 	<div id="container"></div>
@@ -46,7 +47,7 @@
 			},
 
 			subtitle: {
-				text: 'Source map: <a href="http://code.highcharts.com/mapdata/countries/kr/kr-all.js">South Korea</a>'
+				text: 'Source map: <a href="data/korea_map.js">South Korea</a>'
 			},
 
 			mapNavigation: {
