--- a/public/index.html
+++ b/public/index.html
@@ -624,7 +624,7 @@
                         })
                       </script>
                       <span class="mr-2">
-                       확진자: + <i class='fas  text-warning'><p id = "infected_plus"></p></i>
+                       <i class='fas fa-circle text-warning'></i>확진자: + <p id = "infected_plus"></p>
                       </span>
                       <br></br>
                       <br></br>
